interpreter/CygnusParser.js
// Generated from Cygnus.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var CygnusListener = require('./CygnusListener').CygnusListener;
var grammarFileName = "Cygnus.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'.'", "'='", "'entity'", "'('", "')'", "'resource'", 
                     "'flag'", "'timer'", "'property'", "','", "'label'", 
                     "'singular'", "'many'", "'boundary'", "'controlLogic'", 
                     "'draggable'", "'timer_logic'", "'initialize'", "'precondition'", 
                     "'result'", "'\"'", "'outcome'", "'tick'", "'ge'", 
                     "'le'", "'overlaps'", "'control_event'", "'timer_elapsed'", 
                     "'add'", "'delete'", "'draw'", "'clear'", "'fill'", 
                     "'all'", "'increase'", "'decrease'", "'increase_over_time'", 
                     "'decrease_over_time'", "'set_value'", "'set_point'", 
                     "'set_bool'", "'moves'", "'move_toward'", "'move_away'", 
                     "'set_acceleration'", "'apply_restitution'", "'rotates'", 
                     "'rotate_to'", "'look_at'", "'set_sprite'", "'set_color'", 
                     "'set_size'", "'set_bounce'", "'set_draggable'", "'set_static'", 
                     "'mode_change'", "'scalar'", "'amount'", "'distance'", 
                     "'random_int'", "'cursor'", "'location'", "'pool'", 
                     "'click'", "'button'", "'read'", "'write'", "'private'", 
                     "'closed'", "'torus'", "'nearest'", "'furthest'", "'random'", 
                     "'ordered'", "'loop'", "'once'", "'repeat'", "'forward'", 
                     "'backward'", "'left'", "'right'", "'north'", "'south'", 
                     "'east'", "'west'", "'top'", "'middle'", "'bottom'", 
                     "'center'", "'cw'", "'ccw'", "'mouse'", "'key_up'", 
                     "'key_down'", "'key_left'", "'key_right'", "'key_space'", 
                     "'pressed'", "'held'", "'released'", "'reading'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, "BOOL", "NUM", "WORD", "WS", "COMMENT", 
                      "MULTILINE_COMMENT", "ANYCHAR" ];

var ruleNames =  [ "game", "declaration", "comment_section", "separator", 
                   "entity", "resource", "flag", "timer", "property", "label", 
                   "singular", "many", "boundary", "control_logic", "timer_logic", 
                   "initialize", "precondition", "result", "label_name", 
                   "outcome_name", "identifier", "condition", "action", 
                   "value", "scalar", "amount", "distance", "random_int", 
                   "settable", "settable_point", "settable_bool", "point", 
                   "bool", "location", "pool_decl", "pool", "pool_name", 
                   "control_event", "privacy_mode", "boundary_type", "look_criterion", 
                   "spawn_type", "loop_type", "direction", "row", "col", 
                   "angular_direction", "button", "button_state", "reading" ];

function CygnusParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

CygnusParser.prototype = Object.create(antlr4.Parser.prototype);
CygnusParser.prototype.constructor = CygnusParser;

Object.defineProperty(CygnusParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

CygnusParser.EOF = antlr4.Token.EOF;
CygnusParser.T__0 = 1;
CygnusParser.T__1 = 2;
CygnusParser.T__2 = 3;
CygnusParser.T__3 = 4;
CygnusParser.T__4 = 5;
CygnusParser.T__5 = 6;
CygnusParser.T__6 = 7;
CygnusParser.T__7 = 8;
CygnusParser.T__8 = 9;
CygnusParser.T__9 = 10;
CygnusParser.T__10 = 11;
CygnusParser.T__11 = 12;
CygnusParser.T__12 = 13;
CygnusParser.T__13 = 14;
CygnusParser.T__14 = 15;
CygnusParser.T__15 = 16;
CygnusParser.T__16 = 17;
CygnusParser.T__17 = 18;
CygnusParser.T__18 = 19;
CygnusParser.T__19 = 20;
CygnusParser.T__20 = 21;
CygnusParser.T__21 = 22;
CygnusParser.T__22 = 23;
CygnusParser.T__23 = 24;
CygnusParser.T__24 = 25;
CygnusParser.T__25 = 26;
CygnusParser.T__26 = 27;
CygnusParser.T__27 = 28;
CygnusParser.T__28 = 29;
CygnusParser.T__29 = 30;
CygnusParser.T__30 = 31;
CygnusParser.T__31 = 32;
CygnusParser.T__32 = 33;
CygnusParser.T__33 = 34;
CygnusParser.T__34 = 35;
CygnusParser.T__35 = 36;
CygnusParser.T__36 = 37;
CygnusParser.T__37 = 38;
CygnusParser.T__38 = 39;
CygnusParser.T__39 = 40;
CygnusParser.T__40 = 41;
CygnusParser.T__41 = 42;
CygnusParser.T__42 = 43;
CygnusParser.T__43 = 44;
CygnusParser.T__44 = 45;
CygnusParser.T__45 = 46;
CygnusParser.T__46 = 47;
CygnusParser.T__47 = 48;
CygnusParser.T__48 = 49;
CygnusParser.T__49 = 50;
CygnusParser.T__50 = 51;
CygnusParser.T__51 = 52;
CygnusParser.T__52 = 53;
CygnusParser.T__53 = 54;
CygnusParser.T__54 = 55;
CygnusParser.T__55 = 56;
CygnusParser.T__56 = 57;
CygnusParser.T__57 = 58;
CygnusParser.T__58 = 59;
CygnusParser.T__59 = 60;
CygnusParser.T__60 = 61;
CygnusParser.T__61 = 62;
CygnusParser.T__62 = 63;
CygnusParser.T__63 = 64;
CygnusParser.T__64 = 65;
CygnusParser.T__65 = 66;
CygnusParser.T__66 = 67;
CygnusParser.T__67 = 68;
CygnusParser.T__68 = 69;
CygnusParser.T__69 = 70;
CygnusParser.T__70 = 71;
CygnusParser.T__71 = 72;
CygnusParser.T__72 = 73;
CygnusParser.T__73 = 74;
CygnusParser.T__74 = 75;
CygnusParser.T__75 = 76;
CygnusParser.T__76 = 77;
CygnusParser.T__77 = 78;
CygnusParser.T__78 = 79;
CygnusParser.T__79 = 80;
CygnusParser.T__80 = 81;
CygnusParser.T__81 = 82;
CygnusParser.T__82 = 83;
CygnusParser.T__83 = 84;
CygnusParser.T__84 = 85;
CygnusParser.T__85 = 86;
CygnusParser.T__86 = 87;
CygnusParser.T__87 = 88;
CygnusParser.T__88 = 89;
CygnusParser.T__89 = 90;
CygnusParser.T__90 = 91;
CygnusParser.T__91 = 92;
CygnusParser.T__92 = 93;
CygnusParser.T__93 = 94;
CygnusParser.T__94 = 95;
CygnusParser.T__95 = 96;
CygnusParser.T__96 = 97;
CygnusParser.T__97 = 98;
CygnusParser.T__98 = 99;
CygnusParser.T__99 = 100;
CygnusParser.T__100 = 101;
CygnusParser.BOOL = 102;
CygnusParser.NUM = 103;
CygnusParser.WORD = 104;
CygnusParser.WS = 105;
CygnusParser.COMMENT = 106;
CygnusParser.MULTILINE_COMMENT = 107;
CygnusParser.ANYCHAR = 108;

CygnusParser.RULE_game = 0;
CygnusParser.RULE_declaration = 1;
CygnusParser.RULE_comment_section = 2;
CygnusParser.RULE_separator = 3;
CygnusParser.RULE_entity = 4;
CygnusParser.RULE_resource = 5;
CygnusParser.RULE_flag = 6;
CygnusParser.RULE_timer = 7;
CygnusParser.RULE_property = 8;
CygnusParser.RULE_label = 9;
CygnusParser.RULE_singular = 10;
CygnusParser.RULE_many = 11;
CygnusParser.RULE_boundary = 12;
CygnusParser.RULE_control_logic = 13;
CygnusParser.RULE_timer_logic = 14;
CygnusParser.RULE_initialize = 15;
CygnusParser.RULE_precondition = 16;
CygnusParser.RULE_result = 17;
CygnusParser.RULE_label_name = 18;
CygnusParser.RULE_outcome_name = 19;
CygnusParser.RULE_identifier = 20;
CygnusParser.RULE_condition = 21;
CygnusParser.RULE_action = 22;
CygnusParser.RULE_value = 23;
CygnusParser.RULE_scalar = 24;
CygnusParser.RULE_amount = 25;
CygnusParser.RULE_distance = 26;
CygnusParser.RULE_random_int = 27;
CygnusParser.RULE_settable = 28;
CygnusParser.RULE_settable_point = 29;
CygnusParser.RULE_settable_bool = 30;
CygnusParser.RULE_point = 31;
CygnusParser.RULE_bool = 32;
CygnusParser.RULE_location = 33;
CygnusParser.RULE_pool_decl = 34;
CygnusParser.RULE_pool = 35;
CygnusParser.RULE_pool_name = 36;
CygnusParser.RULE_control_event = 37;
CygnusParser.RULE_privacy_mode = 38;
CygnusParser.RULE_boundary_type = 39;
CygnusParser.RULE_look_criterion = 40;
CygnusParser.RULE_spawn_type = 41;
CygnusParser.RULE_loop_type = 42;
CygnusParser.RULE_direction = 43;
CygnusParser.RULE_row = 44;
CygnusParser.RULE_col = 45;
CygnusParser.RULE_angular_direction = 46;
CygnusParser.RULE_button = 47;
CygnusParser.RULE_button_state = 48;
CygnusParser.RULE_reading = 49;

function GameContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CygnusParser.RULE_game;
    return this;
}

GameContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GameContext.prototype.constructor = GameContext;

GameContext.prototype.EOF = function() {
    return this.getToken(CygnusParser.EOF, 0);
};

GameContext.prototype.declaration = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(DeclarationContext);
    } else {
        return this.getTypedRuleContext(DeclarationContext,i);
    }
};

GameContext.prototype.comment_section = function() {
    return this.getTypedRuleContext(Comment_sectionContext,0);
};

GameContext.prototype.enterRule = function(listener) {
    if(listener instanceof CygnusListener ) {
        listener.enterGame(this);
	}
};

GameContext.prototype.exitRule = function(listener) {
    if(listener instanceof CygnusListener ) {
        listener.exitGame(this);
	}
};




CygnusParser.GameContext = GameContext;

CygnusParser.prototype.game = function() {

    var localctx = new GameContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, CygnusParser.RULE_game);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 103;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CygnusParser.T__2) | (1 << CygnusParser.T__5) | (1 << CygnusParser.T__6) | (1 << CygnusParser.T__10) | (1 << CygnusParser.T__11) | (1 << CygnusParser.T__12) | (1 << CygnusParser.T__13) | (1 << CygnusParser.T__14) | (1 << CygnusParser.T__16) | (1 << CygnusParser.T__17) | (1 << CygnusParser.T__18) | (1 << CygnusParser.T__19))) !== 0) || _la===CygnusParser.T__62 || _la===CygnusParser.T__100) {
            this.state = 100;
            this.declaration();
            this.state = 105;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 107;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===CygnusParser.T__1) {
            this.state = 106;
            this.comment_section();
        }

        this.state = 109;
        this.match(CygnusParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function DeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CygnusParser.RULE_declaration;
    return this;
}

DeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DeclarationContext.prototype.constructor = DeclarationContext;

DeclarationContext.prototype.entity = function() {
    return this.getTypedRuleContext(EntityContext,0);
};

DeclarationContext.prototype.resource = function() {
    return this.getTypedRuleContext(ResourceContext,0);
};

DeclarationContext.prototype.flag = function() {
    return this.getTypedRuleContext(FlagContext,0);
};

DeclarationContext.prototype.label = function() {
    return this.getTypedRuleContext(LabelContext,0);
};

DeclarationContext.prototype.singular = function() {
    return this.getTypedRuleContext(SingularContext,0);
};

DeclarationContext.prototype.many = function() {
    return this.getTypedRuleContext(ManyContext,0);
};

DeclarationContext.prototype.boundary = function() {
    return this.getTypedRuleContext(BoundaryContext,0);
};

DeclarationContext.prototype.control_logic = function() {
    return this.getTypedRuleContext(Control_logicContext,0);
};

DeclarationContext.prototype.timer_logic = function() {
    return this.getTypedRuleContext(Timer_logicContext,0);
};

DeclarationContext.prototype.pool_decl = function() {
    return this.getTypedRuleContext(Pool_declContext,0);
};

DeclarationContext.prototype.initialize = function() {
    return this.getTypedRuleContext(InitializeContext,0);
};

DeclarationContext.prototype.precondition = function() {
    return this.getTypedRuleContext(PreconditionContext,0);
};

DeclarationContext.prototype.result = function() {
    return this.getTypedRuleContext(ResultContext,0);
};

DeclarationContext.prototype.reading = function() {
    return this.getTypedRuleContext(ReadingContext,0);
};

DeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof CygnusListener ) {
        listener.enterDeclaration(this);
	}
};

DeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof CygnusListener ) {
        listener.exitDeclaration(this);
	}
};




CygnusParser.DeclarationContext = DeclarationContext;

CygnusParser.prototype.declaration = function() {

    var localctx = new DeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, CygnusParser.RULE_declaration);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 125;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case CygnusParser.T__2:
            this.state = 111;
            this.entity();
            break;
        case CygnusParser.T__5:
            this.state = 112;
            this.resource();
            break;
        case CygnusParser.T__6:
            this.state = 113;
            this.flag();
            break;
        case CygnusParser.T__10:
            this.state = 114;
            this.label();
            break;
        case CygnusParser.T__11:
            this.state = 115;
            this.singular();
            break;
        case CygnusParser.T__12:
            this.state = 116;
            this.many();
            break;
        case CygnusParser.T__13:
            this.state = 117;
            this.boundary();
            break;
        case CygnusParser.T__14:
            this.state = 118;
            this.control_logic();
            break;
        case CygnusParser.T__16:
            this.state = 119;
            this.timer_logic();
            break;
        case CygnusParser.T__62:
            this.state = 120;
            this.pool_decl();
            break;
        case CygnusParser.T__17:
            this.state = 121;
            this.initialize();
            break;
        case CygnusParser.T__18:
            this.state = 122;
            this.precondition();
            break;
        case CygnusParser.T__19:
            this.state = 123;
            this.result();
            break;
        case CygnusParser.T__100:
            this.state = 124;
            this.reading();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 127;
        this.match(CygnusParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Comment_sectionContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CygnusParser.RULE_comment_section;
    return this;
}

Comment_sectionContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Comment_sectionContext.prototype.constructor = Comment_sectionContext;

Comment_sectionContext.prototype.separator = function() {
    return this.getTypedRuleContext(SeparatorContext,0);
};

Comment_sectionContext.prototype.enterRule = function(listener) {
    if(listener instanceof CygnusListener ) {
        listener.enterComment_section(this);
	}
};

Comment_sectionContext.prototype.exitRule = function(listener) {
    if(listener instanceof CygnusListener ) {
        listener.exitComment_section(this);
	}
};




CygnusParser.Comment_sectionContext = Comment_sectionContext;

CygnusParser.prototype.comment_section = function() {

    var localctx = new Comment_sectionContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, CygnusParser.RULE_comment_section);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 129;
        this.separator();
        this.state = 133;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << CygnusParser.T__0) | (1 << CygnusParser.T__1) | (1 << CygnusParser.T__2) | (1 << CygnusParser.T__3) | (1 << CygnusParser.T__4) | (1 << CygnusParser.T__5) | (1 << CygnusParser.T__6) | (1 << CygnusParser.T__7) | (1 << CygnusParser.T__8) | (1 << CygnusParser.T__9) | (1 << CygnusParser.T__10) | (1 << CygnusParser.T__11) | (1 << CygnusParser.T__12) | (1 << CygnusParser.T__13) | (1 << CygnusParser.T__14) | (1 << CygnusParser.T__15) | (1 << CygnusParser.T__16) | (1 << CygnusParser.T__17) | (1 << CygnusParser.T__18) | (1 << CygnusParser.T__19) | (1 << CygnusParser.T__20) | (1 << CygnusParser.T__21) | (1 << CygnusParser.T__22) | (1 << CygnusParser.T__23) | (1 << CygnusParser.T__24) | (1 << CygnusParser.T__25) | (1 << CygnusParser.T__26) | (1 << CygnusParser.T__27) | (1 << CygnusParser.T__28) | (1 << CygnusParser.T__29) | (1 << CygnusParser.T__30))) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & ((1 << (CygnusParser.T__31 - 32)) | (1 << (CygnusParser.T__32 - 32)) | (1 << (CygnusParser.T__33 - 32)) | (1 << (CygnusParser.T__34 - 32)) | (1 << (CygnusParser.T__35 - 32)) | (1 << (CygnusParser.T__36 - 32)) | (1 << (CygnusParser.T__37 - 32)) | (1 << (CygnusParser.T__38 - 32)) | (1 << (CygnusParser.T__39 - 32)) | (1 << (CygnusParser.T__40 - 32)) | (1 << (CygnusParser.T__41 - 32)) | (1 << (CygnusParser.T__42 - 32)) | (1 << (CygnusParser.T__43 - 32)) | (1 << (CygnusParser.T__44 - 32)) | (1 << (CygnusParser.T__45 - 32)) | (1 << (CygnusParser.T__46 - 32)) | (1 << (CygnusParser.T__47 - 32)) | (1 << (CygnusParser.T__48 - 32)) | (1 << (CygnusParser.T__49 - 32)) | (1 << (CygnusParser.T__50 - 32)) | (1 << (CygnusParser.T__51 - 32)) | (1 << (CygnusParser.T__52 - 32)) | (1 << (CygnusParser.T__53 - 32)) | (1 << (CygnusParser.T__54 - 32)) | (1 << (CygnusParser.T__55 - 32)) | (1 << (CygnusParser.T__56 - 32)) | (1 << (CygnusParser.T__57 - 32)) | (1 << (CygnusParser.T__58 - 32)) | (1 << (CygnusParser.T__59 - 32)) | (1 << (CygnusParser.T__60 - 32)) | (1 << (CygnusParser.T__61 - 32)) | (1 << (CygnusParser.T__62 - 32)))) !== 0) || ((((_la - 64)) & ~0x1f) == 0 && ((1 << (_la - 64)) & ((1 << (CygnusParser.T__63 - 64)) | (1 << (CygnusParser.T__64 - 64)) | (1 << (CygnusParser.T__65 - 64)) | (1 << (CygnusParser.T__66 - 64)) | (1 << (CygnusParser.T__67 - 64)) | (1 << (CygnusParser.T__68 - 64)) | (1 << (CygnusParser.T__69 - 64)) | (1 << (CygnusParser.T__70 - 64)) | (1 << (CygnusParser.T__71 - 64)) | (1 << (CygnusParser.T__72 - 64)) | (1 << (CygnusParser.T__73 - 64)) | (1 << (CygnusParser.T__74 - 64)) | (1 << (CygnusParser.T__75 - 64)) | (1 << (CygnusParser.T__76 - 64)) | (1 << (CygnusParser.T__77 - 64)) | (1 << (CygnusParser.T__78 - 64)) | (1 << (CygnusParser.T__79 - 64)) | (1 << (CygnusParser.T__80 - 64)) | (1 << (CygnusParser.T__81 - 64)) | (1 << (CygnusParser.T__82 - 64)) | (1 << (CygnusParser.T__83 - 64)) | (1 << (CygnusParser.T__84 - 64)) | (1 << (CygnusParser.T__85 - 64)) | (1 << (CygnusParser.T__86 - 64)) | (1 << (CygnusParser.T__87 - 64)) | (1 << (CygnusParser.T__88 - 64)) | (1 << (CygnusParser.T__89 - 64)) | (1 << (CygnusParser.T__90 - 64)) | (1 << (CygnusParser.T__91 - 64)) | (1 << (CygnusParser.T__92 - 64)) | (1 << (CygnusParser.T__93 - 64)) | (1 << (CygnusParser.T__94 - 64)))) !== 0) || ((((_la - 96)) & ~0x1f) == 0 && ((1 << (_la - 96)) & ((1 << (CygnusParser.T__95 - 96)) | (1 << (CygnusParser.T__96 - 96)) | (1 << (CygnusParser.T__97 - 96)) | (1 << (CygnusParser.T__98 - 96)) | (1 << (CygnusParser.T__99 - 96)) | (1 << (CygnusParser.T__100 - 96)) | (1 << (CygnusParser.BOOL - 96)) | (1 << (CygnusParser.NUM - 96)) | (1 << (CygnusParser.WORD - 96)) | (1 << (CygnusParser.WS - 96)) | (1 << (CygnusParser.COMMENT - 96)) | (1 << (CygnusParser.MULTILINE_COMMENT - 96)) | (1 << (CygnusParser.ANYCHAR - 96)))) !== 0)) {
            this.state = 130;
            this.matchWildcard();
            this.state = 135;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function SeparatorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CygnusParser.RULE_separator;
    return this;
}

SeparatorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
SeparatorContext.prototype.constructor = SeparatorContext;


SeparatorContext.prototype.enterRule = function(listener) {
    if(listener instanceof CygnusListener ) {
        listener.enterSeparator(this);
	}
};

SeparatorContext.prototype.exitRule = function(listener) {
    if(listener instanceof CygnusListener ) {
        listener.exitSeparator(this);
	}
};




CygnusParser.SeparatorContext = SeparatorContext;

CygnusParser.prototype.separator = function() {

    var localctx = new SeparatorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, CygnusParser.RULE_separator);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 137; 
        this._errHandler.sync(this);
        var _alt = 1;
        do {
        	switch (_alt) {
        	case 1:
        		this.state = 136;
        		this.match(CygnusParser.T__1);
        		break;
        	default:
        		throw new antlr4.error.NoViableAltException(this);
        	}
        	this.state = 139; 
        	this._errHandler.sync(this);
        	_alt = this._interp.adaptivePredict(this._input,4, this._ctx);
        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function EntityContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = CygnusParser.RULE_entity;
    return this;
}

EntityContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
EntityContext.prototype.constructor = EntityContext;

EntityContext.prototype.identifier = function() {
    return this.getTypedRuleContext(IdentifierContext,0);
};

EntityContext.prototype.enterRule = function(listener) {
    if(listener instanceof CygnusListener ) {
        listener.enterEntity(this);
	}
};
